--- a/platformio.ini
+++ b/platformio.ini
@@ -14,10 +14,12 @@ platform = https://github.com/platformio/platform-espressif32.git
 build_flags =
 	-std=gnu++2a
 	-frtti
-board = lolin_s3
+        -DCORE_DEBUG_LEVEL=5
+board = esp32s3usbotg
 lib_deps =
-	ArduinoFake
+	;ArduinoFake
 	h2zero/NimBLE-Arduino@^1.4.1
 lib_compat_mode = off
 build_unflags =
 	-std=gnu++11
+monitor_speed = 115200
